# macdesigner

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  SPM2.json  _config.yml  _toc.yml  conf.py  design.json  dicorca_spm.json  dicorca_spm_2.json  fem_simulation.ipynb  index.rst  installation.rst  make.bat  plano_x_b.ipynb  pyleecan_build.ipynb  references.bib  usage.rst  volumen_diametro.ipynb
docs/Femm/: SPM2_model.ans  SPM2_model.fem
macdesigner/: __init__.py  ayme_test.ipynb  cli.py  macdesigner.py
macdesigner/tools/: __init__.py
tests/: __init__.py  ayme_test.ipynb  test_macdesigner.py
